compiling_error.txt
/Users/utkarshsingh/Desktop/Coding/TestingCodility.cpp:7:14: error: use of undeclared identifier 'vector'
int solution(vector<int> &A) {
             ^
/Users/utkarshsingh/Desktop/Coding/TestingCodility.cpp:7:24: error: expected '(' for function-style cast or type construction
int solution(vector<int> &A) {
                    ~~~^
/Users/utkarshsingh/Desktop/Coding/TestingCodility.cpp:7:27: error: use of undeclared identifier 'A'
int solution(vector<int> &A) {
                          ^
/Users/utkarshsingh/Desktop/Coding/TestingCodility.cpp:7:29: error: expected ';' after top level declarator
int solution(vector<int> &A) {
                            ^
                            ;
4 errors generated.
